# sentrascan-platform

./: .gitignore  .sentrascan.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.production  Dockerfile.protected  LICENSE  MAKEFILE_TEST_REPORT.md  Makefile  README.md  WARP.md  coverage.xml  docker-compose.dev.yml  docker-compose.gcp.yml  docker-compose.protected.yml  docker-compose.yml  pyproject.toml  test_makefile.sh
.cursor/rules/: debug-deep.mdc  debug-fast.mdc  generate-tasks.mdc  (+1 more)
docs/: ADMIN-GUIDE.md  API-CLIENT-EXAMPLES.md  BACKUP-RECOVERY.md  BREAKING_CHANGES.md  CONTAINER-PROTECTION-QUICKSTART.md  CONTAINER-PROTECTION.md  CREATE_SUPER_ADMIN.md  DOCKER_OPTIMIZATION.md  DOCUMENTATION-IMPROVEMENT-PLAN.md  DOCUMENTATION-STRUCTURE.md  HARMONIZATION-SUMMARY.md  INTEGRATION-CICD.md  MARKETING_OVERVIEW.md  MONITORING.md  PRODUCT-REQUIREMENTS-DOCUMENT.md  QUICK-START.md  README.md  RUNBOOKS.md  SECRETS-MANAGEMENT.md  SECURITY-AUDIT-AUTH-AUTHZ.md  SECURITY.md  SENTRASCAN-MODEL-PRD.md  SENTRASCAN-PLATFORM-PRD.md  STREAMLINING-PLAN.md  STREAMLINING-SUMMARY.md  TECHNICAL-DOCUMENTATION.md  USER-GUIDE.md  changes-summary.md  scanner-enhancements-summary.md  semgrep-distroless-limitation.md
scripts/: api-smoketest.sh  buildx-multiarch.sh  security-scan-container.sh  security-scan-dependencies.sh  setup_test_api_key.py  test.sh
tasks/: SECTION1_COMPLETION_SUMMARY.md  prd-a-foundation-user-management.md  prd-b-tenant-management-compliance.md  prd-c-policy-exception-management.md  prd-d-documentation-branding.md  prd-mcp-scanner-static-improvements.md  prd-rag-scanner.md  tasks-prd-platform-enhancements.md  tasks-prd-ui-redesign.md  testing-summary.md
telemetry/: events.jsonl
tests/: ACCEPTANCE_TEST_PLAN.md  ACCEPTANCE_TEST_RESULTS.md  API_PERFORMANCE_TEST_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  FUNCTIONAL_TESTING_COMPLETE.md  FUNCTIONAL_TESTING_GUIDE.md  FUNCTIONAL_TEST_REPORT.md  FUNCTIONAL_TEST_RESULTS.md  HUGGINGFACE_TESTING_PROCESS.md  HUGGINGFACE_TESTING_SUMMARY.md  HUGGINGFACE_TEST_RESULTS.md  LEGACY_TESTS_UPDATE_SUMMARY.md  MODEL_SCANNING_TEST_PROCESS.md  MODEL_SCANNING_TEST_SUMMARY.md  MODEL_SCAN_DEBUG_ISSUE.md  MODEL_SCAN_FIX_SUMMARY.md  PERFORMANCE_BASELINE_COMPARISON.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_TEST_REPORT.md  README.md  README_POSTGRESQL.md  SECTION5_COMPLETION_SUMMARY.md  SECURITY_TESTS_HARDENED_CONTAINER.md  SECURITY_TEST_REPORT.md  SECURITY_TEST_RESULTS.md  SECURITY_TEST_RESULTS_FINAL.md  SECURITY_TEST_RESULTS_POSTGRESQL.md  TEST_COMPREHENSIVE_REPORT.md  TEST_COVERAGE_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_FINAL_RESULTS.md  TEST_SECTION1_SUMMARY.md  TEST_SECTION2_SUMMARY.md  TEST_SECTION3_SUMMARY.md  TEST_SECTION5_SUMMARY.md  UAT_CHECKLIST.md  UAT_FEEDBACK_TEMPLATE.md  UAT_PLAN.md  UAT_RESULTS_TEMPLATE.md  UNIT_TEST_SUMMARY.md  (+46 more)
tests/test_mcp_server/: README.md  mcp.json  pyproject.toml
tests/test_mcp_server/src/test_mcp_server/: __init__.py  api_client.py  database.py  file_ops.py  server.py  utils.py  vulnerabilities.py
(+136 files in other folders)
