[project]
name = "test-mcp-server"
version = "0.1.0"
description = "Test MCP server with comprehensive vulnerability patterns for scanner testing"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.28.0",
    "sqlalchemy>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

